@@ -1,3 +1,7 @@
+2004-05-13 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b110
+
+	* Fix: ngettext fixes.
+
 2004-05-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b109
 
 	* Fix: Forgot the "empty" case for the strict photo counting.
